[gd_scene load_steps=5 format=3 uid="uid://csyi3rxr6vlot"]

[ext_resource type="Theme" uid="uid://umrlbh25q1rw" path="res://themes/menu.tres" id="1_klos3"]
[ext_resource type="Script" uid="uid://bxwgyir465oc" path="res://scenes/stage_select.gd" id="2_nbh0i"]
[ext_resource type="PackedScene" uid="uid://cywgm8te3676u" path="res://scenes/UI/mute_button.tscn" id="3_8xntf"]
[ext_resource type="PackedScene" uid="uid://4h637aknfddx" path="res://scenes/UI/menu_background.tscn" id="4_ng2yn"]

[node name="StageSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_klos3")
script = ExtResource("2_nbh0i")

[node name="MenuBackground" parent="." instance=ExtResource("4_ng2yn")]
layout_mode = 1

[node name="MuteButton" parent="." instance=ExtResource("3_8xntf")]
layout_mode = 0
offset_left = 1489.0
offset_top = 38.0
offset_right = 1566.0
offset_bottom = 115.0

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -139.0
offset_top = -173.0
offset_right = 133.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
text = "back to menu
"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -36.5
offset_right = 119.0
offset_bottom = 36.5
grow_horizontal = 2
grow_vertical = 2

[node name="Stage1" type="Button" parent="GridContainer"]
layout_mode = 2
text = "tomato fields"

[node name="Stage2" type="Button" parent="GridContainer"]
layout_mode = 2
text = "city"

[node name="Stage3" type="Button" parent="GridContainer"]
layout_mode = 2
text = "city, but..."

[node name="Stage4" type="Button" parent="GridContainer"]
layout_mode = 2
text = "backstage"
